# Game_Of_Life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Cell.h  GameOfLife.h
life/: start.lif
rules/: dense_cluster.txt  explosion.txt  rapid_spread.txt
src/: GameOfLife.cpp  main.cpp
templates/: blinker.txt  pentadecathlon.txt  pulsar.txt
test/: test_main.cpp
